--- a/index.html
+++ b/index.html
@@ -23,48 +23,52 @@
     </ul>
   </nav>
 
-  <main class="main">
-    <h2 class="heading">オリジナルレシピ</h2>
-    <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Aut autem praesentium esse repellat quas minus labore laboriosam commodi, ipsa a non adipisci dignissimos quasi excepturi nesciunt rem, numquam, sed animi.</p>
+  <div class="flex-container">
 
-    <article class="article clearfix">
-      <h3 class="title">タコのカルパッチョ</h3> 
-      <p class="desc"><img class="image" src="./images/salad.jpg" alt="">Lorem ipsum dolor sit amet consectetur, adipisicing elit. Libero rerum eum vitae facere, nobis hic. Rerum quae minima ipsam ipsa placeat animi minus totam nihil eveniet recusandae, omnis harum error.</p>
-    </article>
-    <article class="article clearfix">
-      <h3 class="title">しらすのペペロンチーノ</h3>
-      <p class="desc"><img class="image" src="./images/pasta.jpg" alt="">Lorem ipsum dolor sit amet consectetur adipisicing elit. Ipsam labore maiores blanditiis ut ratione veniam nulla harum magni sapiente praesentium, minima nemo ad aliquid. Ea facere quo hic laboriosam! Sequi.</p>
-    </article>
-  </main>
+    <main class="main">
+      <h2 class="heading">オリジナルレシピ</h2>
+      <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Aut autem praesentium esse repellat quas minus labore laboriosam commodi, ipsa a non adipisci dignissimos quasi excepturi nesciunt rem, numquam, sed animi.</p>
 
-  <aside class="aside aside1">
-    <h2 class="heading">最新記事</h2>
-    <ul class="aside-list">
-      <li><a href="#">リスト</a></li>
-      <li><a href="#">リスト</a></li>
-      <li><a href="#">リスト</a></li>
-      <li><a href="#">リスト</a></li>
-    </ul>
-    <h2 class="heading">人気レシピ</h2>
-    <ul class="aside-list">
-      <li><a href="#">レシピ</a></li>
-      <li><a href="#">レシピ</a></li>
-      <li><a href="#">レシピ</a></li>
-      <li><a href="#">レシピ</a></li>
-      <li><a href="#">レシピ</a></li>
-    </ul>
-    <h2 class="heading">人気商品</h2>
-    <ul class="aside-list">
-      <li><a href="#">アイテム</a></li>
-      <li><a href="#">アイテム</a></li>
-      <li><a href="#">アイテム</a></li>
-      <li><a href="#">アイテム</a></li>
-      <li><a href="#">アイテム</a></li>
-    </ul>
-    <div class="ad">
-      <a href="#"><img class="image" src="./images/ad.jpg" alt=""></a>
-    </div>
-  </aside>
+      <article class="article clearfix">
+        <h3 class="title">タコのカルパッチョ</h3> 
+        <p class="desc"><img class="image" src="./images/salad.jpg" alt="">Lorem ipsum dolor sit amet consectetur, adipisicing elit. Libero rerum eum vitae facere, nobis hic. Rerum quae minima ipsam ipsa placeat animi minus totam nihil eveniet recusandae, omnis harum error.</p>
+      </article>
+      <article class="article clearfix">
+        <h3 class="title">しらすのペペロンチーノ</h3>
+        <p class="desc"><img class="image" src="./images/pasta.jpg" alt="">Lorem ipsum dolor sit amet consectetur adipisicing elit. Ipsam labore maiores blanditiis ut ratione veniam nulla harum magni sapiente praesentium, minima nemo ad aliquid. Ea facere quo hic laboriosam! Sequi.</p>
+      </article>
+    </main>
+
+    <aside class="aside">
+      <h2 class="heading">最新記事</h2>
+      <ul class="aside-list">
+        <li><a href="#">リスト</a></li>
+        <li><a href="#">リスト</a></li>
+        <li><a href="#">リスト</a></li>
+        <li><a href="#">リスト</a></li>
+      </ul>
+      <h2 class="heading">人気レシピ</h2>
+      <ul class="aside-list">
+        <li><a href="#">レシピ</a></li>
+        <li><a href="#">レシピ</a></li>
+        <li><a href="#">レシピ</a></li>
+        <li><a href="#">レシピ</a></li>
+        <li><a href="#">レシピ</a></li>
+      </ul>
+      <h2 class="heading">人気商品</h2>
+      <ul class="aside-list">
+        <li><a href="#">アイテム</a></li>
+        <li><a href="#">アイテム</a></li>
+        <li><a href="#">アイテム</a></li>
+        <li><a href="#">アイテム</a></li>
+        <li><a href="#">アイテム</a></li>
+      </ul>
+      <div class="ad">
+        <a href="#"><img class="image" src="./images/ad.jpg" alt=""></a>
+      </div>
+    </aside>
+
+  </div>
 
   <footer class="footer">
     <p class="copyright">©︎SampleSite</p>
