固定幅にするため、全体をwrapしてmargin: 0 autoで中央寄せ

--- a/index.html
+++ b/index.html
@@ -9,6 +9,8 @@
 </head>
 <body>
 
+<div class="wrapper">
+
   <header class="header">
     <h1 class="site-title"><a href="/">Herb Kitchen</a></h1>
   </header>
@@ -73,6 +75,8 @@
   <footer class="footer">
     <p class="copyright">©︎SampleSite</p>
   </footer>
+
+</div>
 
 </body>
 </html>
